--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tanstack/react-table": "^8.21.2",
     "@vercel/speed-insights": "^1.2.0",
     "chart.js": "^4.4.9",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
